k8s/coma/apps/authentik/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik
  namespace: authentik
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: default-https-redirect@kubernetescrd,default-hsts@kubernetescrd
spec:
  rules:
    - host: "auth.artichoke.cc"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: authentik-server
                port:
                  number: 80
    - host: "*.auth.artichoke.cc"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ak-outpost-coma-http
                port:
                  number: 9000

  tls:
    - hosts:
        - "auth.artichoke.cc"
      secretName: artichokecc-cert
    - hosts:
        - "*.auth.artichoke.cc"
      secretName: artichokecc-wildcard-cert
